# hdns

./: .gitignore  LICENSE  README.md  hdns.cabal  zdns.cabal
Network/: HDNS.hs  ZDNS.hs
Network/HDNS/: Decode.hs  Encode.hs  Internal.hs  MessageRender.hs  SimpleResolver.hs  Types.hs  Util.hs
Network/ZDNS/: MessageRender.hs  SimpleResolver.hs  Types.hs  Util.hs
Network/ZDNS/Types/: EDNS.hs  Message.hs  Name.hs  RRset.hs
examples/: Dig.hi  Dig.hs
test/: DomainTreeProp.hs  EncodeSpec.hs  MainTestSuit.hs  ZDNSGen.hs
