Name:                   hdns
Version:                0.0.1
Author:                 benjamin han <ben.han.cn@gmail.com>
Maintainer:             benjamin han <ben.han.cn@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               DNS library in Haskell
Description:
  A thread-safe DNS library in pure Haskell
Category:               Network
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  GHC-Options:          -Wall
  Exposed-Modules:      Network.HDNS
                        Network.HDNS.Types
                        Network.HDNS.Encode
                        Network.HDNS.Decode
  Other-Modules:        Network.HDNS.Internal
                        Network.HDNS.MessageRender
                        Network.HDNS.Util
  if impl(ghc >= 7)
    Build-Depends:      base >= 4 && < 5
                      , attoparsec
                      , attoparsec-conduit
                      , binary
                      , blaze-builder
                      , bytestring
                      , conduit >= 0.5
                      , containers
                      , iproute >= 1.2.4
                      , mtl
                      , network >= 2.3
                      , network-conduit
                      , random
  else
    Build-Depends:      base >= 4 && < 5
                      , attoparsec
                      , attoparsec-conduit
                      , binary
                      , blaze-builder
                      , bytestring
                      , conduit
                      , containers
                      , iproute >= 1.2.4
                      , mtl
                      , network
                      , network-bytestring
                      , network-conduit
                      , random

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test, .
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Other-Modules:        EncodeSpec
  Build-Depends:        base
                      , attoparsec
                      , attoparsec-conduit
                      , binary
                      , blaze-builder
                      , bytestring
                      , conduit >= 0.5
                      , containers
                      , hdns
                      , hspec
                      , iproute >= 1.2.4
                      , mtl
                      , network >= 2.3
                      , network-conduit
                      , random

Source-Repository head
  Type:                 git
  Location:             git://github.com/kazu-yamamoto/dns.git
