Name:                   hdns
Version:                0.0.1
Author:                 benjamin han <ben.han.cn@gmail.com>
Maintainer:             benjamin han <ben.han.cn@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               DNS library in Haskell
Description:
  A thread-safe DNS library in pure Haskell
Category:               Network
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  GHC-Options:          -Wall
  Exposed-Modules:      Network.HDNS
                        Network.HDNS.Types
                        Network.HDNS.Encode
                        Network.HDNS.Decode
                        Network.HDNS.SimpleResolver
  Other-Modules:        Network.HDNS.Internal
                        Network.HDNS.MessageRender
                        Network.HDNS.Util
  Build-Depends:        base >= 4 && < 5
                      , attoparsec
                      , attoparsec-conduit
                      , binary
                      , blaze-builder
                      , bytestring
                      , containers
                      , iproute >= 1.2.4
                      , mtl
                      , network >= 2.3
                      , benutil
                      , resourcet
                      , transformers

  Source-Repository head
  Type:                 git
  Location:             https://github.com/ben-han-cn/hdns.git
